Amendments to the radius of smoothing kernels and export functions

--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -46,7 +46,7 @@
     "## Date Created: \n",
     "04/25/23\n",
     "## Date last modified:\n",
-    "06/13/23\n",
+    "07/19/23\n",
     "## Email: \n",
     "patrick[at]csp-inc.org\n",
     "## ---------------------------\n",
@@ -210,9 +210,7 @@
     "centroids = grid_5km.map(get_centroid)\n",
     "\n",
     "# Choose radii for summarizing covariates\n",
-    "rad_large = 10000\n",
-    "rad_small = 5000\n",
-    "name_large = \"_10km\"\n",
+    "rad_small = 2500\n",
     "name_small = \"_5km\"\n",
     "\n",
     "## Plot to check \n",
@@ -239,7 +237,7 @@
      "output_type": "stream",
      "text": [
       "lui Band names: ['Ag', 'Urban', 'Transport', 'Energy']\n",
-      "lui_focal_means Band names: ['Ag_10km', 'Urban_10km', 'Transport_10km', 'Energy_10km']\n"
+      "lui_focal_means Band names: ['Ag_5km', 'Urban_5km', 'Transport_5km', 'Energy_5km']\n"
      ]
     }
    ],
@@ -249,11 +247,10 @@
     "### Get the band names as a check \n",
     "lui_names = lui.bandNames()\n",
     "print('lui Band names:', lui_names.getInfo())  # ee.List of band names\n",
-    "lui_focal_means_large = focal_mean(lui, rad_large, \"meters\", name_large).updateMask(conus_img).clip(geometry)\n",
     "lui_focal_means_small = focal_mean(lui, rad_small, \"meters\", name_small).updateMask(conus_img).clip(geometry)\n",
     "\n",
     "### Get the band names as a check \n",
-    "lui_focal_means_names = lui_focal_means_large.bandNames()\n",
+    "lui_focal_means_names = lui_focal_means_small.bandNames()\n",
     "print('lui_focal_means Band names:', lui_focal_means_names.getInfo())  # ee.List of band names"
    ]
   },
@@ -267,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,17 +379,27 @@
     "  return feature.set(values)\n",
     "\n",
     "# Map the extract_values function over the feature collection\n",
-    "#agpcov_results = centroids.map(extract_agpcov_values)\n",
+    "agpcov_results = centroids.map(extract_agpcov_values)\n",
     "pasturepcov_results = centroids.map(extract_pasturepcov_values)\n",
     "\n",
     "# Export the feature collection as a CSV file\n",
-    "task = ee.batch.Export.table.toDrive(\n",
+    "task1 = ee.batch.Export.table.toDrive(\n",
+    "    collection=agpcov_results,\n",
+    "    description='RowcropPCOV-export',\n",
+    "    folder='GEE-exports',\n",
+    "    fileNamePrefix='RowcropPCov_5km_1619_230719',\n",
+    "    fileFormat='CSV')\n",
+    "\n",
+    "# Export the feature collection as a CSV file\n",
+    "task2 = ee.batch.Export.table.toDrive(\n",
     "    collection=pasturepcov_results,\n",
     "    description='PasturePCOV-export',\n",
     "    folder='GEE-exports',\n",
-    "    fileNamePrefix='PasturePCov_5km_1619',\n",
+    "    fileNamePrefix='PasturePCov_5km_1619_230719',\n",
     "    fileFormat='CSV')\n",
-    "task.start()\n"
+    "\n",
+    "task1.start()\n",
+    "task2.start()\n"
    ]
   },
   {
@@ -405,15 +412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "band_names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2020_AFG', '2020_PFG', '2020_SHR', '2020_TRE', '2020_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n",
-      "tree_mean_smooth Band names: ['RAP_TRE_1621_mean_5km']\n"
+      "band_names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2020_AFG', '2020_PFG', '2020_SHR', '2020_TRE', '2020_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n"
      ]
     }
    ],
@@ -449,9 +455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tree_mean_smooth Band names: ['RAP_TRE_1621_mean_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Define string to match\n",
@@ -470,9 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shrub_mean_smooth Band names: ['RAP_SHR_1621_mean_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Select the SHRUB COVER bands from the image\n",
@@ -489,9 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "afg_mean_smooth Band names: ['RAP_AFG_1621_mean_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Select the ANNUAL FORB AND GRASS COVER bands from the image\n",
@@ -507,9 +537,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pfg_mean_smooth Band names: ['RAP_PFG_1621_mean_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Select the PERENNIAL FORB AND GRASS COVER bands from the image\n",
@@ -526,9 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bgr_mean_smooth Band names: ['RAP_BGR_1621_mean_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Select the BARE GROUND COVER bands from the image\n",
@@ -553,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,9 +628,9 @@
     "    collection=rap_results,\n",
     "    description='RAP-export',\n",
     "    folder='GEE-exports',\n",
-    "    fileNamePrefix='RAP_5km_smooth',\n",
+    "    fileNamePrefix='RAP_5km_smooth_230719',\n",
     "    fileFormat='CSV')\n",
-    "task.start()\n"
+    "#task.start()\n"
    ]
   },
   {
@@ -627,25 +673,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Load daymet dataset \n",
-    "daymet_16 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2016-01-01', '2016-12-31'))\n",
-    "daymet_17 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2017-01-01', '2017-12-31'))\n",
+    "#daymet_16 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2016-01-01', '2016-12-31'))\n",
+    "#daymet_17 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2017-01-01', '2017-12-31'))\n",
     "daymet_18 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2018-01-01', '2018-12-31'))\n",
     "daymet_19 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2019-01-01', '2019-12-31'))\n",
+    "daymet_20 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2020-01-01', '2020-12-31'))\n",
     "daymet_21 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2021-01-01', '2021-12-31'))\n",
     "\n",
-    "daymet_1621 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2016-01-01', '2021-12-31'))\n",
-    "tmax_1621 = daymet_1621.select(\"tmax\").mean().rename(['tmax_1621_mean'])\n",
-    "tmin_1621 = daymet_1621.select(\"tmin\").mean().rename(['tmin_1621_mean'])\n",
-    "prcp_1621 = daymet_1621.select(\"prcp\").mean().rename(['prcp_1621_mean'])\n",
-    "swe_1621 = daymet_1621.select(\"swe\").mean().rename(['swe_1621_mean'])\n",
+    "daymet_1821 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2018-01-01', '2021-12-31'))\n",
+    "tmax_1821 = daymet_1821.select(\"tmax\").mean().rename(['tmax_1821_mean'])\n",
+    "tmin_1821 = daymet_1821.select(\"tmin\").mean().rename(['tmin_1821_mean'])\n",
+    "prcp_1821 = daymet_1821.select(\"prcp\").mean().rename(['prcp_1821_mean'])\n",
+    "swe_1821 = daymet_1821.select(\"swe\").mean().rename(['swe_1821_mean'])\n",
     "\n",
-    "climate_1621 = ee.Image([tmax_1621, tmin_1621, prcp_1621, swe_1621])\n",
-    "climate_1621_small = focal_mean(climate_1621, rad_small, \"meters\", name_small).updateMask(conus_img).clip(geometry)\n"
+    "climate_1821 = ee.Image([tmax_1821, tmin_1821, prcp_1821, swe_1821])\n",
+    "climate_1821_small = focal_mean(climate_1821, rad_small, \"meters\", name_small).updateMask(conus_img).clip(geometry)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_climate_values(feature):\n",
+    "  # Get the geometry of the feature\n",
+    "  geometry = feature.geometry()\n",
+    "\n",
+    "  # Extract the raster values for the feature\n",
+    "  values = climate_1821_small.reduceRegion(\n",
+    "      reducer=ee.Reducer.mean(),\n",
+    "      geometry=geometry,\n",
+    "      scale=1000)\n",
+    "\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "# Map the extract_values function over the feature collection\n",
+    "climate_results = centroids.map(extract_climate_values)\n",
+    "\n",
+    "\n",
+    "# Export the feature collection as a CSV file\n",
+    "task = ee.batch.Export.table.toDrive(\n",
+    "    collection=climate_results,\n",
+    "    description='climate-export',\n",
+    "    folder='GEE-exports',\n",
+    "    fileNamePrefix='climate_5km_smooth_230719',\n",
+    "    fileFormat='CSV')\n",
+    "task.start()"
    ]
   },
   {
@@ -660,7 +740,7 @@
     "scale=270\n",
     "task1 = ee.batch.Export.image.toDrive(image = climate_1621_small,\n",
     "                                     folder = 'GEE-exports',\n",
-    "                                     description = 'climate-1621-mean-smoothed' + str(scale) + \"m\",\n",
+    "                                     description = 'climate-1621-mean-smoothed' + str(scale) + \"m\" ,\n",
     "                                     scale = scale,\n",
     "                                     region = geometry.geometry(),\n",
     "                                     maxPixels = 1e13,\n",
@@ -678,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +821,7 @@
     "    collection=terrain_results,\n",
     "    description='Terrain-export-noVRM',\n",
     "    folder='GEE-exports',\n",
-    "    fileNamePrefix='terrain_5km_smooth',\n",
+    "    fileNamePrefix='terrain_5km_smooth_230719',\n",
     "    fileFormat='CSV')\n",
     "task.start()"
    ]
