made adjustments to re-calculate landcover and climate covariates for 2018-2021

--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -255,6 +255,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_lui_values(feature):\n",
+    "  # Get the geometry of the feature\n",
+    "  geometry = feature.geometry()\n",
+    "\n",
+    "  # Extract the raster values for the feature\n",
+    "  values = lui_focal_means_small.reduceRegion(\n",
+    "      reducer=ee.Reducer.mean(),\n",
+    "      geometry=geometry,\n",
+    "      scale=250)\n",
+    "\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "# Map the extract_values function over the feature collection\n",
+    "lui_results = centroids.map(extract_lui_values)\n",
+    "\n",
+    "\n",
+    "# Export the feature collection as a CSV file\n",
+    "task = ee.batch.Export.table.toDrive(\n",
+    "    collection=lui_results,\n",
+    "    description='lui-export',\n",
+    "    folder='GEE-exports',\n",
+    "    fileNamePrefix='LUI_5km_smooth_230719',\n",
+    "    fileFormat='CSV')\n",
+    "task.start()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -412,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "band_names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2020_AFG', '2020_PFG', '2020_SHR', '2020_TRE', '2020_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n"
+      "band_names: ['2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2020_AFG', '2020_PFG', '2020_SHR', '2020_TRE', '2020_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n"
      ]
     }
    ],
@@ -427,7 +460,7 @@
     "geometry = ee.Feature(ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/bobwhite_model_states\").first());\n",
     "##---------- Define the years that you want to export --------------\n",
     "##---------- End year is inclusive in this case  ------------------\n",
-    "yearStart = 2016\n",
+    "yearStart = 2018\n",
     "yearEnd = 2021\n",
     "\n",
     "## -------------- Define the plant functional types (PFTs) that you want to export --------------\n",
@@ -438,7 +471,7 @@
     "\n",
     "cover = ee.ImageCollection(\"projects/rangeland-analysis-platform/vegetation-cover-v3\")\n",
     "## ------------- Select the PFTs for processing as defined by User  --------------\n",
-    "cover_toExport = cover.select(PFTs).filter(ee.Filter.inList('year', ee.List([2016, 2017, 2018, 2019, 2020, 2021]))).toBands()\n",
+    "cover_toExport = cover.select(PFTs).filter(ee.Filter.inList('year', ee.List([2018, 2019, 2020, 2021]))).toBands()\n",
     "\n",
     "band_names = cover_toExport.bandNames()\n",
     "print('band_names:', band_names.getInfo())  # ee.List of band names\n",
@@ -455,14 +488,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tree_mean_smooth Band names: ['RAP_TRE_1621_mean_5km']\n"
+      "tree_mean_smooth Band names: ['RAP_TRE_1821_mean_5km']\n"
      ]
     }
    ],
@@ -475,7 +508,7 @@
     "# Filter the bands to select only the ones that contain the partial string\n",
     "tree_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
     "# Select the TREE COVER bands from the image, calculate the multi-year mean, and apply the focal smooth operation\n",
-    "tree_img = cover_toExport.select(tree_bands).reduce(ee.Reducer.mean()).rename(['RAP_TRE_1621_mean'])\n",
+    "tree_img = cover_toExport.select(tree_bands).reduce(ee.Reducer.mean()).rename(['RAP_TRE_1821_mean'])\n",
     "\n",
     "tree_mean_smooth = focal_mean(tree_img, rad_small, \"meters\", name_small).clip(geometry)\n",
     "tree_mean_smooth_band_names = tree_mean_smooth.bandNames()\n",
@@ -484,14 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shrub_mean_smooth Band names: ['RAP_SHR_1621_mean_5km']\n"
+      "shrub_mean_smooth Band names: ['RAP_SHR_1821_mean_5km']\n"
      ]
     }
    ],
@@ -502,7 +535,7 @@
     "# Filter the bands to select only the ones that contain the partial string\n",
     "shrub_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
     "# Select the SHRUB COVER bands from the image\n",
-    "shrub_img = cover_toExport.select(shrub_bands).reduce(ee.Reducer.mean()).rename(['RAP_SHR_1621_mean'])\n",
+    "shrub_img = cover_toExport.select(shrub_bands).reduce(ee.Reducer.mean()).rename(['RAP_SHR_1821_mean'])\n",
     "\n",
     "shrub_mean_smooth = focal_mean(shrub_img, rad_small, \"meters\", name_small).clip(geometry)\n",
     "shrub_mean_smooth_band_names = shrub_mean_smooth.bandNames()\n",
@@ -511,14 +544,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "afg_mean_smooth Band names: ['RAP_AFG_1621_mean_5km']\n"
+      "afg_mean_smooth Band names: ['RAP_AFG_1821_mean_5km']\n"
      ]
     }
    ],
@@ -528,7 +561,7 @@
     "string_to_match = \"_AFG\"\n",
     "# Filter the bands to select only the ones that contain the partial string\n",
     "afg_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
-    "afg_img = cover_toExport.select(afg_bands).reduce(ee.Reducer.mean()).rename(['RAP_AFG_1621_mean'])\n",
+    "afg_img = cover_toExport.select(afg_bands).reduce(ee.Reducer.mean()).rename(['RAP_AFG_1821_mean'])\n",
     "\n",
     "afg_mean_smooth = focal_mean(afg_img, rad_small, \"meters\", name_small).clip(geometry)\n",
     "afg_mean_smooth_band_names = afg_mean_smooth.bandNames()\n",
@@ -537,14 +570,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pfg_mean_smooth Band names: ['RAP_PFG_1621_mean_5km']\n"
+      "pfg_mean_smooth Band names: ['RAP_PFG_1821_mean_5km']\n"
      ]
     }
    ],
@@ -555,7 +588,7 @@
     "# Filter the bands to select only the ones that contain the partial string\n",
     "pfg_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
     "# Select the ANNUAL FORB AND GRASS COVER bands from the image\n",
-    "pfg_img = cover_toExport.select(pfg_bands).reduce(ee.Reducer.mean()).rename(['RAP_PFG_1621_mean'])\n",
+    "pfg_img = cover_toExport.select(pfg_bands).reduce(ee.Reducer.mean()).rename(['RAP_PFG_1821_mean'])\n",
     "\n",
     "pfg_mean_smooth = focal_mean(pfg_img, rad_small, \"meters\", name_small).clip(geometry)\n",
     "pfg_mean_smooth_band_names = pfg_mean_smooth.bandNames()\n",
@@ -564,14 +597,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bgr_mean_smooth Band names: ['RAP_BGR_1621_mean_5km']\n"
+      "bgr_mean_smooth Band names: ['RAP_BGR_1821_mean_5km']\n"
      ]
     }
    ],
@@ -582,7 +615,7 @@
     "# Filter the bands to select only the ones that contain the partial string\n",
     "bgr_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
     "# Select the ANNUAL FORB AND GRASS COVER bands from the image\n",
-    "bgr_img = cover_toExport.select(bgr_bands).reduce(ee.Reducer.mean()).rename(['RAP_BGR_1621_mean'])\n",
+    "bgr_img = cover_toExport.select(bgr_bands).reduce(ee.Reducer.mean()).rename(['RAP_BGR_1821_mean'])\n",
     "\n",
     "bgr_mean_smooth = focal_mean(bgr_img, rad_small, \"meters\", name_small).clip(geometry)\n",
     "bgr_mean_smooth_band_names = bgr_mean_smooth.bandNames()\n",
@@ -599,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,9 +661,9 @@
     "    collection=rap_results,\n",
     "    description='RAP-export',\n",
     "    folder='GEE-exports',\n",
-    "    fileNamePrefix='RAP_5km_smooth_230719',\n",
+    "    fileNamePrefix='RAP_1821_5km_smooth_230719',\n",
     "    fileFormat='CSV')\n",
-    "#task.start()\n"
+    "task.start()\n"
    ]
   },
   {
@@ -643,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +688,7 @@
     "scale=270\n",
     "task1 = ee.batch.Export.image.toDrive(image = RAP_unsmoothed,\n",
     "                                     folder = 'GEE-exports',\n",
-    "                                     description = 'RAP-1621-mean-unsmoothed' + str(scale) + \"m\",\n",
+    "                                     description = 'RAP-1821-mean-unsmoothed' + str(scale) + \"m\",\n",
     "                                     scale = scale,\n",
     "                                     region = geometry.geometry(),\n",
     "                                     maxPixels = 1e13,\n",
@@ -673,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,17 +763,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Convert all to float-32\n",
-    "climate_1621_small = climate_1621_small.float()\n",
-    "scale=270\n",
-    "task1 = ee.batch.Export.image.toDrive(image = climate_1621_small,\n",
+    "climate_1821_small = climate_1821_small.float()\n",
+    "scale=1000\n",
+    "task1 = ee.batch.Export.image.toDrive(image = climate_1821_small,\n",
     "                                     folder = 'GEE-exports',\n",
-    "                                     description = 'climate-1621-mean-smoothed' + str(scale) + \"m\" ,\n",
+    "                                     description = 'climate-1821-mean-smoothed' + str(scale) + \"m\" ,\n",
     "                                     scale = scale,\n",
     "                                     region = geometry.geometry(),\n",
     "                                     maxPixels = 1e13,\n",
